data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_ServerListEntryLanDetected.md
# ServerListEntryLanDetected

**Inheritance:** java.lang.Object → net.minecraft.client.gui.ServerListEntryLanDetected

## Class signature

```java
public class ServerListEntryLanDetected extends java.lang.Object implements GuiListExtended.IGuiListEntry
```

## Constructors

- `ServerListEntryLanDetected(GuiMultiplayer p_i45046_1_, LanServerDetector.LanServer p_i45046_2_)`

## Methods

- `void drawEntry(int p_148279_1_, int p_148279_2_, int p_148279_3_, int p_148279_4_, int p_148279_5_, Tessellator p_148279_6_, int p_148279_7_, int p_148279_8_, boolean p_148279_9_)`
- `LanServerDetector.LanServer func_148289_a()`
- `boolean mousePressed(int p_148278_1_, int p_148278_2_, int p_148278_3_, int p_148278_4_, int p_148278_5_, int p_148278_6_)`
- `void mouseReleased(int p_148277_1_, int p_148277_2_, int p_148277_3_, int p_148277_4_, int p_148277_5_, int p_148277_6_)`

## Fields

- `protected LanServerDetector.LanServer field_148291_b`
- `protected Minecraft field_148293_a`