data/forge_javadoc/1.8.9/processed/net_minecraft_client_gui_ServerListEntryLanDetected.md
# ServerListEntryLanDetected

**Inheritance:** java.lang.Object → net.minecraft.client.gui.ServerListEntryLanDetected

## Class signature

```java
public class ServerListEntryLanDetected extends java.lang.Object implements GuiListExtended.IGuiListEntry
```

## Constructors

- `ServerListEntryLanDetected(GuiMultiplayer p_i45046_1_, LanServerDetector.LanServer p_i45046_2_)`

## Methods

- `void drawEntry(int slotIndex, int x, int y, int listWidth, int slotHeight, int mouseX, int mouseY, boolean isSelected)`
- `LanServerDetector.LanServer getLanServer()`
- `boolean mousePressed(int slotIndex, int p_148278_2_, int p_148278_3_, int p_148278_4_, int p_148278_5_, int p_148278_6_)` — Returns true if the mouse has been pressed on this control.
- `void mouseReleased(int slotIndex, int x, int y, int mouseEvent, int relativeX, int relativeY)` — Fired when the mouse button is released.
- `void setSelected(int p_178011_1_, int p_178011_2_, int p_178011_3_)`

## Fields

- `protected LanServerDetector.LanServer field_148291_b`
- `protected Minecraft mc`